# pianotrainer

./: CMakeLists.txt
src/: abstractplayview.cpp  abstractplayview.h  keyboard.cpp  keyboard.h  main.cpp  pianotrainer.qml  playcontroller.cpp  playcontroller.h  playpianoview.cpp  playpianoview.h  playsoundlistener.cpp  playsoundlistener.h  playsoundview.cpp  playsoundview.h  resources.qrc  songmodel.cpp  songmodel.h  trainerwindow.cpp  trainerwindow.h  trainerwindow.ui
src/QMidi/: CMakeLists.txt
src/QMidi/examples/qtplaysmf/: playsmf.cpp
